--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Site Title -->
-  <title>Site Title</title>
+  <title>6 Ways to Keep Your Gums Healthy</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
@@ -34,8 +34,53 @@
 </header>
 
 <main>
+  <div class="toper-section-1">
+        <h2 class="title">6 Ways to Keep Your Gums Healthy</h2>
+
+        <h2>What’s so great about gums?</h2>
+        <p>When it comes to your mouth’s health, it’s not all about how straight your teeth are or how bright your smile is. You can’t forget about your gums! Even if you’re cavity-free and have the pearliest chompers in town, that doesn’t mean you’re immune to gum disease. Since it’s usually painless, most people have no idea that anything is wrong with their gums.</p>
+        <h2>What is gum disease?</h2>
+        <p>Gum disease starts when plaque builds up under and along the gum line. Plaque is a sticky film-like substance that’s filled with bacteria. It can cause infections that hurt the gum and bone, leading to gum disease and tooth decay. Plaque also can cause <a href="">gingivitis</a>, the earliest stage of gum disease. Gingivitis causes your gums to become:</p>
+        <ul class="custom-ul ">
+          <li>inflamed</li>
+          <li>tender</li>
+          <li>red</li>
+          <li>swollen</li>
+          <li>prone to bleeding</li>
+        </ul>
+        <p>Fortunately, since the bone and tissue holding the teeth in place aren’t impacted, this damage is <a href="">reversible</a>.</p>
+        <p>You can also develop <a href="">periodontitis</a>, an advanced form of gum disease. Periodontitis impacts the bones that hold your teeth in place. Left untreated, it can ruin the gums, bones, and tissues connected to your teeth.</p>
+        <p>The final stage of gum disease is advanced periodontitis. This is when the fibers and bone supporting your teeth are destroyed. It can impact your bite, and teeth may need to be removed.</p>
+
+        <p>According to the <a href="http://www.mouthhealthy.org/en/az-topics/g/gum-disease">American Dental Association (ADA)</a> , signs that you might have gum disease include:</p>
+
+        <ul  class="custom-ul "><li>consistently bad taste or breath</li><li>separating or loose permanent teeth</li><li>gums that easily bleed</li><li>gums that are swollen, red, or tender</li><li>gums that have pulled away from your teeth</li></ul>
+        <p>Gum disease is preventable. Here are a few ways you can help keep your gums healthy.</p>
+
+        <h2>1. Floss</h2>
+        <p>Floss at least once a day. This helps remove the plaque and food that’s beyond your toothbrush’s reach, according to the <a href="http://www.mouthhealthy.org/en/az-topics/f/flossing" target="_blank" rel="noopener noreferrer" >ADA</a>. It doesn’t matter when you floss. Do it at night, do it in the morning, or do it after lunch… just do it! </p>
+
+
+        <h2>2. Get regular dental cleanings</h2>
+        <p>Your dentist can detect early gum disease symptoms if you see them on a regular basis. That way symptoms can be treated before they become more serious. A professional cleaning is the only way to remove tartar. It can also get rid of any plaque you missed when brushing or flossing. If you have gingivitis, brushing, flossing, and regular dental cleanings can help reverse it.</p>
+
+        <h2>3. Quit smoking</h2>
+        <p>Yet another reason for smokers to quit: Smoking is strongly associated with the onset of gum disease. Since smoking weakens your immune system, it also makes it harder to fight off a gum infection, say the <a href="https://www.cdc.gov/tobacco/campaign/tips/diseases/periodontal-gum-disease.html" target="_blank" rel="noopener noreferrer" >Centers for Disease Control and Prevention (CDC)</a>. Plus, smoking makes it more difficult for your gums to heal once they’ve been damaged.</p>
+
+        <h2>4. Brush twice a day</h2>
+        <p>Brush your teeth after every meal. This helps remove the food and plaque trapped between your teeth and gums. Scrub your tongue too, since it can harbor bacteria. Your toothbrush should have soft bristles and fit in your mouth comfortably, says the <a href="https://www.mayoclinic.org/healthy-lifestyle/adult-health/in-depth/dental/art-20045536?pg=1" target="_blank" rel="noopener noreferrer" >Mayo Clinic</a>. </p>
+        <p>Consider a battery-powered or electric toothbrush. These can help reduce gingivitis and plaque more than manual brushing. Swap toothbrushes or toothbrush heads every three to four months, or sooner if the bristles start to fray.</p>
+        <p>Try <a href="" rel="noopener noreferrer nofollow sponsored" target="_blank" >an electric toothbrush</a> today.</p>
+
+
+        <h2>5. Use fluoride toothpaste</h2>
+        <p>As for toothpaste, store shelves are lined with brands that claim to reduce gingivitis, freshen breath, and whiten teeth. How do you know which one is best for healthy gums? Make sure to choose toothpaste that contains fluoride and has the ADA seal of acceptance. After that, the flavor and color is up to you!</p>
+        <p>You can purchase <a href="" rel="noopener noreferrer nofollow sponsored" target="_blank" >toothpaste that contains fluoride</a> online.</p>
+        <h2>6. Use a therapeutic mouthwash</h2>
+        <p>Usually available over the counter, <a href=" " rel="noopener noreferrer nofollow sponsored" target="_blank" class="content-link css-5r4717">therapeutic mouthwashes</a> can help reduce plaque, prevent or reduce gingivitis, reduce the speed that tarter develops, or a combination of these benefits, according to the <a href="http://www.ada.org/en/member-center/oral-health-topics/mouthrinse" target="_blank" rel="noopener noreferrer" >ADA</a>. Plus: A rinse helps remove food particles and debris from your mouth, though it’s not a substitute for flossing or brushing. Look for the ADA seal, which means it’s been deemed effective and safe. </p>
+        <p>It doesn’t matter whether your brush, floss, or rinse first. Just do a good job and use the right products.</p>
+  </div>
   <div class="section-1">
-    <h2>Steel Bite Pro Reviews</h2>
     <img src="assets/img/Steel-Bite-Pro-Supplement.png" alt="Steel-Bite-Pro-Supplement">
     <p><strong>Most people these days face dental problems constantly. Problems like cavities, gingivits, periodontitis, broken teeth, oral cancer, sensitivity, etc are all hard to face</strong>. These are very painful and the fear of visiting a dentist is even unbearable.</p>
     <p>Most people would try to run away from the problem but it just keeps coming back. No home remedies actually work. <u>The dental sessions in the clinic, surgery, and medicines cost a fortune.</u></p>
