--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Site Title -->
-  <title>6 Ways to Keep Your Gums Healthy</title>
+  <title>7 Ways to Rebuild Your Teeth, Gums And Get Rid of Tooth Decay</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
 
 <main>
   <div class="toper-section-1">
-        <h2 class="title">6 Ways to Keep Your Gums Healthy</h2>
+        <h2 class="title">7 Ways to Rebuild Your Teeth, Gums And Get Rid of Tooth Decay</h2>
 
         <h2>What’s so great about gums?</h2>
         <p>When it comes to your mouth’s health, it’s not all about how straight your teeth are or how bright your smile is. You can’t forget about your gums! Even if you’re cavity-free and have the pearliest chompers in town, that doesn’t mean you’re immune to gum disease. Since it’s usually painless, most people have no idea that anything is wrong with their gums.</p>
@@ -81,6 +81,7 @@
         <p>It doesn’t matter whether your brush, floss, or rinse first. Just do a good job and use the right products.</p>
   </div>
   <div class="section-1">
+    <h2>7. Use Steel Brite Pro Supplement</h2>
     <img src="assets/img/Steel-Bite-Pro-Supplement.png" alt="Steel-Bite-Pro-Supplement">
     <p><strong>Most people these days face dental problems constantly. Problems like cavities, gingivits, periodontitis, broken teeth, oral cancer, sensitivity, etc are all hard to face</strong>. These are very painful and the fear of visiting a dentist is even unbearable.</p>
     <p>Most people would try to run away from the problem but it just keeps coming back. No home remedies actually work. <u>The dental sessions in the clinic, surgery, and medicines cost a fortune.</u></p>
